deleted all traces of tetris ever exisiting

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <h2>🏆 Hall of Shame</h2>
             <div class="game-selector">
                 <button class="btn" onclick="loadLeaderboard('snake')">Snake</button>
-                <button class="btn" onclick="loadLeaderboard('tetris')">Tetris</button>
+                <!--<button class="btn" onclick="loadLeaderboard('tetris')">Tetris</button>-->
                 <button class="btn" onclick="loadLeaderboard('dino')">Dino</button>
                 <button class="btn" onclick="loadLeaderboard('2048')">2048</button>
                 <button class="btn" onclick="loadLeaderboard('flappy')">Flappy</button>
