--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>BROWSERCADE - The World's Most Cursed Arcade</title>
+    <title>BROWSECADE - The World's Most Cursed Arcade</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
 </head>
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="title-bar">
                 <div class="title-bar-text">
-                    <span class="skull">💀</span> BROWSERCADE <span class="skull">💀</span>
+                    <span class="skull">💀</span> BROWSECADE <span class="skull">💀</span>
                 </div>
                 <div class="title-bar-controls">
                     <button class="title-bar-control" onclick="minimizeWindow()">_</button>
