--- a/public/index.html
+++ b/public/index.html
@@ -329,10 +329,11 @@ async function unlockAllAchievements() {
                     <h3 id="game-title">Game</h3>
                     <button class="close-btn" onclick="closeGame()">&times;</button>
                 </div>
-                
+                <div class="modal-body">
                     <div id="game-container"></div>
-                    <div class="modal-body"><div class="game-controls">
+                    <div class="game-controls">
                         <button class="btn" onclick="restartGame()">🔄 Restart</button>
+                        <button class="btn" onclick="closeGame()">🚪 Give Up</button>
                     </div>
                 </div>
             </div>
